hide article info box to avoid problems on narrow (mobile) screens

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -135,7 +135,6 @@ span.unused {
   border-top: 2px solid #78B74E;
 
   #total-sum {
-    width: 22em;
     margin: .5em 2em 0 0;
     float: right;
     #order-button {
@@ -143,6 +142,10 @@ span.unused {
 
       input:disabled {
         background-color: red; }
+    }
+    .currency {
+      width: 4.5em;
+      text-align: right;
     }
   }
 }
